Disable weekly scheduler.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -344,11 +344,13 @@ for prj in lsb_dependencies:
 
 # Finally, the big weekly scheduler.  This makes sure every non-SDK
 # project is built at least once a week.
+# XXX: Disabled for now; consider re-enabling via cron and the
+#      job submission queue above.
 
-sch_weekly = scheduler.Nightly(name="sch-weekly", branch=None,
-                               builderNames=sch_weekly_names,
-                               dayOfWeek=5, hour=0, minute=0)
-c['schedulers'].append(sch_weekly)
+#sch_weekly = scheduler.Nightly(name="sch-weekly", branch=None,
+#                               builderNames=sch_weekly_names,
+#                               dayOfWeek=5, hour=0, minute=0)
+#c['schedulers'].append(sch_weekly)
 
 
 ####### BUILDERS
