Apply the timeout for the bzr jobs consistently.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -37,6 +37,7 @@ web_htpasswd_path = "/data/buildbot/buildbot_htpasswd"
 
 stable_timer_hours = 1
 slow_stable_timer_hours = 6
+bzr_timeout_hours = 4
 
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
@@ -102,6 +103,7 @@ lsb_buildslave_arch_indep_arch = "x86_64"
 
 stable_timer_seconds = stable_timer_hours * 60 * 60
 slow_stable_timer_seconds = slow_stable_timer_hours * 60 * 60
+bzr_timeout_seconds = bzr_timeout_hours * 60 * 60
 
 # Helper functions
 
@@ -407,7 +409,8 @@ for arch in lsb_archs:
     build_sdk = factory.BuildFactory()
     build_sdk.addStep(Bzr(baseURL=bzr_toplevel, 
                           defaultBranch="lsb/devel/build_env", 
-                          mode="copy", workdir="build_env"))
+                          mode="copy", workdir="build_env",
+                          timeout=bzr_timeout_seconds))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
                                    name="clear-old-packaging",
                                    workdir="build_env"))
@@ -492,7 +495,7 @@ for arch in lsb_archs:
         add_pre_dependency_triggers(prj, build_arch, b)
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
-                      mode="copy", timeout=4*60*60))
+                      mode="copy", timeout=bzr_timeout_seconds))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
                                name="clear-old-results"))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
@@ -545,7 +548,8 @@ for arch in lsb_archs:
         if repo is not None:
             b.addStep(Bzr(baseURL=bzr_toplevel,
                           defaultBranch="lsb/devel/%s" % repo,
-                          workdir=repo, mode="update", timeout=4*60*60))
+                          workdir=repo, mode="update",
+                          timeout=bzr_timeout_seconds))
         b.addStep(ShellCommand(command=["rm", "-rf", "../packaging"],
                                name="clear-old-packaging"))
         b.addStep(ShellCommand(
@@ -598,7 +602,8 @@ for arch in lsb_archs:
     add_pre_dependency_triggers("libbat", arch, libbat)
 
     libbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
-                       workdir="appbat", mode="copy", timeout=4*60*60))
+                       workdir="appbat", mode="copy",
+                       timeout=bzr_timeout_seconds))
     libbat.addStep(ShellCommand(command=["rm", "-rf", "../tools"],
                                 workdir="appbat", name="clear-old-nalfs"))
     libbat.addStep(ShellCommand(command=["mkdir", "-p", "../tools"],
@@ -664,7 +669,8 @@ for arch in lsb_archs:
     add_pre_dependency_triggers("appbat", arch, appbat)
 
     appbat.addStep(Bzr(baseURL=bzr_toplevel, defaultBranch="lsb/devel/appbat",
-                       workdir="appbat", mode="copy", timeout=4*60*60))
+                       workdir="appbat", mode="copy",
+                       timeout=bzr_timeout_seconds))
     appbat.addStep(ShellCommand(command=["rm", "-rf", "../tools"],
                                 workdir="appbat", name="clear-old-nalfs"))
     appbat.addStep(ShellCommand(command=["mkdir", "-p", "../tools"],
@@ -733,7 +739,8 @@ for arch in lsb_archs:
 
     devchk.addStep(Bzr(baseURL=bzr_toplevel, 
                        defaultBranch="lsb/devel/misc-test",
-                       workdir="misc-test", mode="copy", timeout=4*60*60))
+                       workdir="misc-test", mode="copy", 
+                       timeout=bzr_timeout_seconds))
     devchk.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
                                 workdir="misc-test", name="clear-old-results"))
     devchk.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
