Build the SDK on changes like everything else, not once a day.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -222,10 +222,11 @@ for branch in lsb_change_sources:
 
 # Build the SDK daily.  Since it's not complicated, we can schedule
 # all the builds with a single scheduler.
+# XXX: disable for now; build the SDK like everything else.
 
-sch_sdk_names = ["build-sdk-" + x for x in lsb_archs]
-sch_build = scheduler.Nightly(name="build-sdk", branch=None,
-                              builderNames=sch_sdk_names, hour=19, minute=0)
+#sch_sdk_names = ["build-sdk-" + x for x in lsb_archs]
+#sch_build = scheduler.Nightly(name="build-sdk", branch=None,
+#                              builderNames=sch_sdk_names, hour=19, minute=0)
 
 # Accept multiple jobs via a job directory.  Since we have to report
 # which builders we might start, create a list of all projects to pass
@@ -277,10 +278,15 @@ for arch in lsb_archs:
                                      branch="lsb/devel/misc-test",
                                      builderNames=["devchk-" + arch],
                                      treeStableTimer=stable_timer_seconds)
+    sch_sdk = scheduler.Scheduler(name="sch-build-sdk-" + arch,
+                                  branch="lsb/devel/build_env",
+                                  builderNames=["build-sdk-" + arch],
+                                  treeStableTimer=stable_timer_seconds)
 
-    c['schedulers'].extend([sch_libbat, sch_appbat, sch_devchk])
+    c['schedulers'].extend([sch_sdk, sch_libbat, sch_appbat, sch_devchk])
 
     sch_weekly_names.append("devchk-" + arch)
+    sch_weekly_names.append("build-sdk-" + arch)
     if "appbat" not in lsb_dependencies:
         sch_weekly_names.append("appbat-" + arch)
 
