Fix issues with previous commit.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -224,7 +224,7 @@ for branch in lsb_change_sources:
 # all the builds with a single scheduler.
 # XXX: disable for now; build the SDK like everything else.
 
-#sch_sdk_names = ["build-sdk-" + x for x in lsb_archs]
+sch_sdk_names = ["build-sdk-" + x for x in lsb_archs]
 #sch_build = scheduler.Nightly(name="build-sdk", branch=None,
 #                              builderNames=sch_sdk_names, hour=19, minute=0)
 
@@ -255,7 +255,7 @@ sch_jobdir = MultiScheduler(name="sch_jobdir",
                             indep_prj=lsb_arch_indep_projects, 
                             indep_arch=lsb_buildslave_arch_indep_arch)
 
-c['schedulers'] = [sch_build, sch_jobdir]
+c['schedulers'] = [sch_jobdir]
 
 # Collect project names for the weekly scheduler.
 
