Add longer timeouts in strategic places.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -38,6 +38,7 @@ web_htpasswd_path = "/data/buildbot/buildbot_htpasswd"
 stable_timer_hours = 1
 slow_stable_timer_hours = 6
 bzr_timeout_hours = 4
+build_timeout_hours = 1
 
 bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
@@ -104,6 +105,7 @@ lsb_buildslave_arch_indep_arch = "x86_64"
 stable_timer_seconds = stable_timer_hours * 60 * 60
 slow_stable_timer_seconds = slow_stable_timer_hours * 60 * 60
 bzr_timeout_seconds = bzr_timeout_hours * 60 * 60
+build_timeout_seconds = build_timeout_hours * 60 * 60
 
 # Helper functions
 
@@ -424,7 +426,8 @@ for arch in lsb_archs:
             command=["bzr", "checkout", 
                      os.path.join(bzr_toplevel, "lsb/devel/packaging"),
                      "../packaging"],
-            name="checkout-packaging", workdir="build_env"))
+            name="checkout-packaging", workdir="build_env", 
+            timeout=bzr_timeout_seconds))
     build_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk",
                                    workdir="build_env", locks=[pkg_lock]))
     build_sdk.addStep(ShellCommand(command=["rm", "-rf", 
@@ -437,7 +440,8 @@ for arch in lsb_archs:
         LSBBuildCommand(command="cd package && make clean " + 
                                 "&& make BZRTREES=../..", 
                         name="build_base", workdir="build_env", 
-                        haltOnFailure=True, makeargs=True))
+                        haltOnFailure=True, makeargs=True,
+                        timeout=build_timeout_seconds))
     build_sdk.addStep(
         ShellCommand(command="cp package/*.rpm ../sdk-results/build_env", 
                      name="copy_base", workdir="build_env"))
@@ -454,7 +458,8 @@ for arch in lsb_archs:
         build_sdk.addStep(LSBBuildCommand(command=sdk_command,
                                           name="build_" + sdk_project,
                                           workdir="packaging",
-                                          haltOnFailure=True, makeargs=True))
+                                          haltOnFailure=True, makeargs=True,
+                                          timeout=build_timeout_seconds))
         build_sdk.addStep(
             ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
                                  % (sdk_project, sdk_project),
@@ -506,7 +511,8 @@ for arch in lsb_archs:
                                name="clear-old-results"))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                name="create-results-dir"))
-        b.addStep(LSBBuildPackage(name="build", haltOnFailure=True))
+        b.addStep(LSBBuildPackage(name="build", haltOnFailure=True,
+                                  timeout=build_timeout_seconds))
         b.addStep(ShellCommand(
                 command="find -L package -name '*.rpm' " +
                         "-exec cp '{}' ../results ';'",
@@ -563,14 +569,15 @@ for arch in lsb_archs:
                          WithProperties("%s/lsb/%%(branch_name)s/packaging"
                                         % bzr_toplevel),
                          "../packaging"],
-                name="checkout-packaging"))
+                name="checkout-packaging", timeout=bzr_timeout_seconds))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
                                name="clear-old-results"))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                name="make-results-dir"))
         b.addStep(LSBBuildFromPackaging(subdir=prj,
                                         env={"BZRTREES": ".."},
-                                        name="build", haltOnFailure=True))
+                                        name="build", haltOnFailure=True,
+                                        timeout=build_timeout_seconds))
         b.addStep(ShellCommand(
                 command="find ../packaging -name '*.rpm' " +
                         "-exec cp '{}' ../results ';'",
@@ -617,7 +624,8 @@ for arch in lsb_archs:
     libbat.addStep(ShellCommand(command=["bzr", "checkout", 
                                          os.path.join(bzr_toplevel, 
                                                       "lsb/devel/nALFS")],
-                                workdir="tools", name="checkout-nalfs"))
+                                workdir="tools", name="checkout-nalfs",
+                                timeout=bzr_timeout_seconds))
     libbat.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
                                 workdir="appbat", name="clear-old-results"))
     libbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
@@ -684,7 +692,8 @@ for arch in lsb_archs:
     appbat.addStep(ShellCommand(command=["bzr", "checkout", 
                                          os.path.join(bzr_toplevel, 
                                                       "lsb/devel/nALFS")],
-                                workdir="tools", name="checkout-nalfs"))
+                                workdir="tools", name="checkout-nalfs",
+                                timeout=bzr_timeout_seconds))
     appbat.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
                                 workdir="appbat", name="clear-old-results"))
     appbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
