Provide output when tarring up results.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -464,7 +464,7 @@ for arch in lsb_archs:
             ShellCommand(command="cp %s/*.rpm ../sdk-results/%s" 
                                  % (sdk_project, sdk_project),
                          name="copy_" + sdk_project, workdir="packaging"))
-    build_sdk.addStep(ShellCommand(command=['tar', 'czf', '../sdk-results.tar.gz',
+    build_sdk.addStep(ShellCommand(command=['tar', 'czvf', '../sdk-results.tar.gz',
                                             '../sdk-results'],
                                    name="pack-sdk", workdir="build_env"))
     build_sdk.addStep(
@@ -517,7 +517,7 @@ for arch in lsb_archs:
                 command="find -L package -name '*.rpm' " +
                         "-exec cp '{}' ../results ';'",
                 name="copy-results"))
-        b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+        b.addStep(ShellCommand(command=["tar", "czvf", "../results.tar.gz", 
                                         "../results"],
                                name="pack-results"))
         b.addStep(
@@ -582,7 +582,7 @@ for arch in lsb_archs:
                 command="find ../packaging -name '*.rpm' " +
                         "-exec cp '{}' ../results ';'",
                 name="copy-results"))
-        b.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+        b.addStep(ShellCommand(command=["tar", "czvf", "../results.tar.gz", 
                                         "../results"],
                                name="pack-results"))
         b.addStep(
@@ -652,7 +652,7 @@ for arch in lsb_archs:
     libbat.addStep(ShellCommand(
             command="find rpm -name '*.rpm' -exec cp '{}' ../results ';'",
             workdir="appbat", name="copy-results"))
-    libbat.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+    libbat.addStep(ShellCommand(command=["tar", "czvf", "../results.tar.gz", 
                                          "../results"],
                                 workdir="appbat", name="pack-results"))
     libbat.addStep(
@@ -726,7 +726,7 @@ for arch in lsb_archs:
     appbat.addStep(ShellCommand(command=["run-appbat-tests", 
                                          "../results", "../results/tests"],
                                 workdir="appbat", name="run-appbat-tests"))
-    appbat.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+    appbat.addStep(ShellCommand(command=["tar", "czvf", "../results.tar.gz", 
                                          "../results"],
                                 workdir="appbat", name="pack-results"))
     appbat.addStep(
@@ -770,7 +770,7 @@ for arch in lsb_archs:
     devchk.addStep(ShellCommand(command="test $(ls ../results | wc -l) -gt 0",
                                 workdir="misc-test", name="check-results",
                                 haltOnFailure=True))
-    devchk.addStep(ShellCommand(command=["tar", "czf", "../results.tar.gz", 
+    devchk.addStep(ShellCommand(command=["tar", "czvf", "../results.tar.gz", 
                                          "../results"],
                                 workdir="misc-test", name="pack-results"))
     devchk.addStep(
