--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -643,7 +643,7 @@ for arch in lsb_archs:
     libbat.addStep(ShellCommand(command="make check || rm -f packages/*.tar*",
                                 workdir="appbat", name="check-pkgcache"))
     libbat.addStep(Compile(command=["make", "libbat", "ENTITYCHECK_QUIET=-q"], 
-                           workdir="appbat"))
+                           workdir="appbat", timeout=build_timeout_seconds))
     libbat.addStep(LSBBuildCommand(command=["make", "check-libbat"],
                                    workdir="appbat",
                                    name="check-libbat", haltOnFailure=True))
@@ -701,20 +701,20 @@ for arch in lsb_archs:
     appbat.addStep(Configure(command=["./configure"], workdir="appbat"))
     appbat.addStep(Compile(command=["make", "appbat", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-appbat", 
-                           timeout=1800))
+                           timeout=build_timeout_seconds))
     appbat.addStep(LSBBuildCommand(command=["make", "check-appbat"],
                                    workdir="appbat",
                                    name="check-appbat", haltOnFailure=True))
     appbat.addStep(Compile(command=["make", "desktop", 
                                     "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-desktop", 
-                           timeout=1800))
+                           timeout=build_timeout_seconds))
     appbat.addStep(LSBBuildCommand(command=["make", "check-desktop"],
                                    workdir="appbat",
                                    name="check-desktop", haltOnFailure=True))
     appbat.addStep(Compile(command=["make", "addons", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-addons",
-                           timeout=1800))
+                           timeout=build_timeout_seconds))
     appbat.addStep(LSBBuildCommand(command=["make", "check-addons"],
                                    workdir="appbat",
                                    name="check-addons", haltOnFailure=True))
