Switch to LSBBuildCommand for package builds on appbat and libbat.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -639,7 +639,8 @@ for arch in lsb_archs:
     libbat.addStep(ShellCommand(command="rm -f /tmp/appbat-pkgcache/*",
                                 workdir="appbat", name="clear-pkgcache",
                                 flunkOnFailure=False, haltOnFailure=False))
-    libbat.addStep(Configure(command=["./configure.libbat"], workdir="appbat"))
+    libbat.addStep(LSBBuildCommand(command=["./configure.libbat"],
+                                   workdir="appbat", name="configure"))
     libbat.addStep(ShellCommand(command="make check || rm -f packages/*.tar*",
                                 workdir="appbat", name="check-pkgcache"))
     libbat.addStep(Compile(command=["make", "libbat", "ENTITYCHECK_QUIET=-q"], 
@@ -647,8 +648,8 @@ for arch in lsb_archs:
     libbat.addStep(LSBBuildCommand(command=["make", "check-libbat"],
                                    workdir="appbat",
                                    name="check-libbat", haltOnFailure=True))
-    libbat.addStep(ShellCommand(command="cd rpm && make libbat",
-                                name="build-pkg", workdir="appbat"))
+    libbat.addStep(LSBBuildCommand(command="cd rpm && make libbat",
+                                   name="build-pkg", workdir="appbat"))
     libbat.addStep(ShellCommand(
             command="find rpm -name '*.rpm' -exec cp '{}' ../results ';'",
             workdir="appbat", name="copy-results"))
@@ -698,7 +699,8 @@ for arch in lsb_archs:
                                 workdir="appbat", name="clear-old-results"))
     appbat.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
                                 workdir="appbat", name="create-results-dir"))
-    appbat.addStep(Configure(command=["./configure"], workdir="appbat"))
+    appbat.addStep(LSBBuildCommand(command=["./configure"], workdir="appbat",
+                                   name="configure"))
     appbat.addStep(Compile(command=["make", "appbat", "ENTITYCHECK_QUIET=-q"], 
                            workdir="appbat", name="build-appbat", 
                            timeout=build_timeout_seconds))
@@ -718,8 +720,8 @@ for arch in lsb_archs:
     appbat.addStep(LSBBuildCommand(command=["make", "check-addons"],
                                    workdir="appbat",
                                    name="check-addons", haltOnFailure=True))
-    appbat.addStep(ShellCommand(command="cd rpm && make",
-                                name="build-pkg", workdir="appbat"))
+    appbat.addStep(LSBBuildCommand(command="cd rpm && make",
+                                   name="build-pkg", workdir="appbat"))
     appbat.addStep(ShellCommand(
             command="find rpm -name '*.rpm' -exec cp '{}' ../results ';'",
             workdir="appbat", name="copy-results"))
