Make sure devchk builds via MultiScheduler use the right repo.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -249,6 +249,7 @@ for prj in arch_prj_list:
 
 jobdir_repos = dict(lsb_packaging_projects)
 jobdir_repos["build-sdk"] = "build_env"
+jobdir_repos["devchk"] = "misc-test"
 
 sch_jobdir = MultiScheduler(name="sch_jobdir",
                             builderNames=multi_builder_list, 
