Lock both dependent and non-dependent builds when building the SDK.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -472,10 +472,19 @@ for arch in lsb_archs:
         FileUpload(slavesrc="../sdk-results.tar.gz", 
                    masterdest=WithProperties("lsb-sdk-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
                    workdir="build_env"))
+
+    # A note on locks: we grab both dependent and non-dependent locks
+    # for the SDK.  This is in an attempt to avoid the possibility of
+    # dependent packages being triggered by version control at the same
+    # time as SDK builds, which can be particularly bad as the SDK build
+    # always replaces the SDK.
+
     lsb_builds.append(
         { 'name': 'build-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'build-sdk-' + arch, 'factory': build_sdk, 
-          'category': 'lsb', 'locks': [nondep_job_lock.access('counting')] })
+          'category': 'lsb', 
+          'locks': [nondep_job_lock.access('counting'), 
+                    dep_job_lock.access('counting')] })
 
     reset_sdk = factory.BuildFactory()
     reset_sdk.addStep(ShellCommand(command=['reset-sdk'], name="reset-sdk",
@@ -483,7 +492,9 @@ for arch in lsb_archs:
     lsb_builds.append(
         { 'name': 'reset-sdk-' + arch, 'slavenames': ["lfbuild-" + arch],
           'builddir': 'reset-sdk-' + arch, 'factory': reset_sdk, 
-          'category': 'lsb', 'locks': [nondep_job_lock.access('counting')] })
+          'category': 'lsb',
+          'locks': [nondep_job_lock.access('counting'),
+                    dep_job_lock.access('counting')] })
 
     # "Package subdir" projects.  These have a "package" directory in
     # them; to build their packages, you go to the package directory
