Add a (longer) timeout for appbat package builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -733,7 +733,8 @@ for arch in lsb_archs:
                                    workdir="appbat",
                                    name="check-addons", haltOnFailure=True))
     appbat.addStep(LSBBuildCommand(command="cd rpm && make",
-                                   name="build-pkg", workdir="appbat"))
+                                   name="build-pkg", workdir="appbat",
+                                   timeout=build_timeout_seconds))
     appbat.addStep(ShellCommand(
             command="find rpm -name '*.rpm' -exec cp '{}' ../results ';'",
             workdir="appbat", name="copy-results"))
