Watch and build for the 4.0 branches as well.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -102,6 +102,15 @@ repo_locks = { "misc-test": locks.SlaveLock("misc-test", maxCount = 1) }
 # responsible for building architecture-independent components.
 lsb_buildslave_arch_indep_arch = "x86_64"
 
+# Branches we watch, besides devel.
+branch_watch_list = { "4.0": [ "appbat", "azov-qt3-tests", "azov-qt4-tests",
+                               "desktop-test", "libstdcpp-test", "misc-test",
+                               "olver-core-tests", "perl-test", 
+                               "printing-test", "python-test", "runtime-test",
+                               "t2c-cpp-tests", "t2c-desktop-tests", 
+                               "t2c-harness", "xml-test", "xts5-test" ] }
+
+# Values calculated from configured variables.
 stable_timer_seconds = stable_timer_hours * 60 * 60
 slow_stable_timer_seconds = slow_stable_timer_hours * 60 * 60
 bzr_timeout_seconds = bzr_timeout_hours * 60 * 60
@@ -187,13 +196,18 @@ c['change_source'] = []
 lsb_change_sources = lsb_pkg_subdir_projects + \
     [x[1] for x in lsb_packaging_projects if x[1] is not None] + ["appbat"]
 added = []
-for branch in lsb_change_sources:
-    if branch in added:
+for project in lsb_change_sources:
+    if project in added:
         continue
     c['change_source'].append(
-        BzrPoller(url="%slsb/devel/%s" % (bzr_toplevel, branch),
-                  branch_name="lsb/devel/" + branch))
-    added.append(branch)
+        BzrPoller(url="%slsb/devel/%s" % (bzr_toplevel, project),
+                  branch_name="lsb/devel/" + project))
+    for branch in branch_watch_list:
+        if project in branch_watch_list[branch]:
+            c['change_source'].append(
+                BzrPoller(url="%slsb/%s/%s" % (bzr_toplevel, branch, project),
+                          branch_name="lsb/%s/%s" % (branch, project)))
+    added.append(project)
 
 # For example, if you had CVSToys installed on your repository, and your
 # CVSROOT/freshcfg file had an entry like this:
@@ -307,6 +321,15 @@ for prj in lsb_pkg_subdir_projects:
                                   builderNames=[prj_name],
                                   treeStableTimer=stable_timer_seconds)
         c['schedulers'].append(sch)
+
+        for branch in branch_watch_list:
+            if prj in branch_watch_list[branch]:
+                sch = scheduler.Scheduler(
+                    name="sch-%s-%s" % (prj_name, branch),
+                    branch=os.path.join("lsb", branch, prj),
+                    builderNames=[prj_name],
+                    treeStableTimer=stable_timer_seconds)
+                c['schedulers'].append(sch)
 
         for deplist in lsb_dependencies.itervalues():
             if prj in deplist:
