--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -46,16 +46,16 @@ lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
 
 lsb_bzr_sdk_projects = ["lsbdev-c++", "lsbdev-qt", "lsbdev-qt3"]
 lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
-                           "azov-xml2-tests", "desktop-test", 
-                           "distribution-checker", "dtk-manager", 
-                           "libstdcpp-test", "lsb-setup", "lsb-xvfb", 
-                           "lsb-sigchk", "lsbappchk-perl", "lsbappchk-python", 
-                           "lsbappchk-sh", "lsbsi-tools", 
+                           "azov-xml2-tests", "distribution-checker",
+                           "dtk-manager", "libstdcpp-test", "lsb-setup",
+                           "lsb-xvfb", "lsb-sigchk", "lsbappchk-perl",
+                           "lsbappchk-python", "lsbappchk-sh", "lsbsi-tools", 
                            "makelsbpkg", "olver-core-tests", "perl-test",
                            "printing-test", "python-test", "qmtest-harness",
                            "runtime-test", "t2c-alsa-tests", "t2c-cpp-tests", 
                            "t2c-desktop-tests", "t2c-runtime-tests", 
                            "task-pkgs", "tet-harness", "xts5-test"]
+lsb_pkg_subdir_weird_projects = ["desktop-test"]
 lsb_packaging_projects = [("lsbappchk", "misc-test"),
                           ("lsbarchk", "misc-test"),
                           ("lsbcmdchk", "misc-test"),
@@ -193,8 +193,8 @@ c['slavePortnum'] = 9988
 # put here: there are several in buildbot/changes/*.py to choose from.
 
 c['change_source'] = []
-lsb_change_sources = lsb_pkg_subdir_projects + \
-    [x[1] for x in lsb_packaging_projects if x[1] is not None] + ["appbat"]
+lsb_change_sources = lsb_pkg_subdir_projects + lsb_pkg_subdir_weird_projects \
+    + [x[1] for x in lsb_packaging_projects if x[1] is not None] + ["appbat"]
 added = []
 for project in lsb_change_sources:
     if project in added:
@@ -250,8 +250,8 @@ sch_sdk_names = ["build-sdk-" + x for x in lsb_archs]
 
 multi_builder_list = sch_sdk_names[:]
 
-arch_prj_list = lsb_pkg_subdir_projects + ["appbat", "libbat"] + \
-    [x[0] for x in lsb_packaging_projects]
+arch_prj_list = lsb_pkg_subdir_projects + lsb_pkg_subdir_weird_projects + \
+    ["appbat", "libbat"] + [x[0] for x in lsb_packaging_projects]
 
 for prj in arch_prj_list:
     if prj in lsb_arch_indep_projects:
@@ -309,7 +309,7 @@ for arch in lsb_archs:
 
 # Package subdir schedulers.
 
-for prj in lsb_pkg_subdir_projects:
+for prj in lsb_pkg_subdir_projects + lsb_pkg_subdir_weird_projects:
     if prj in lsb_arch_indep_projects:
         archlist = [lsb_buildslave_arch_indep_arch]
     else:
@@ -541,27 +541,27 @@ for arch in lsb_archs:
         add_pre_dependency_triggers(prj, build_arch, b)
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
-                      mode="copy", timeout=bzr_timeout_seconds))
+                      mode="copy", timeout=bzr_timeout_seconds, workdir=prj))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
-                               name="clear-old-results"))
+                               name="clear-old-results", workdir=prj))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
-                               name="create-results-dir"))
+                               name="create-results-dir", workdir=prj))
         b.addStep(LSBBuildPackage(name="build", haltOnFailure=True,
-                                  timeout=build_timeout_seconds))
+                                  timeout=build_timeout_seconds, workdir=prj))
         b.addStep(ShellCommand(
                 command="find -L package -name '*.rpm' " +
                         "-exec cp '{}' ../results ';'",
-                name="copy-results"))
+                name="copy-results", workdir=prj))
         b.addStep(ShellCommand(command=["tar", "czvf", "../results.tar.gz", 
                                         "../results"],
-                               name="pack-results"))
+                               name="pack-results", workdir=prj))
         b.addStep(
             FileUpload(slavesrc="../results.tar.gz", 
                        masterdest=WithProperties("%s-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % (prj, build_arch)),
-                       name="upload-results"))
+                       name="upload-results", workdir=prj))
         add_post_dependency_triggers(prj, build_arch, b)
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"],
-                               name="clear-results-dir"))
+                               name="clear-results-dir", workdir=prj))
 
         if prj in lsb_dependencies:
             locks = [dep_job_lock.access('counting')]
@@ -642,6 +642,64 @@ for arch in lsb_archs:
 
     # Weird builds.  These don't conform to one of the patterns, and
     # so have to be custom.
+
+    # The desktop-test build is odd because it actually comes from
+    # three repositories, which have to also be checked out.
+    # Otherwise, it's a normal package-subdir build.
+
+    desktop_test = factory.BuildFactory()
+    desktop_test.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
+    add_pre_dependency_triggers("desktop-test", arch, desktop_test)
+    desktop_test.addStep(Bzr(baseURL=bzr_toplevel,
+                             defaultBranch="lsb/devel/desktop-test",
+                             mode="copy", timeout=bzr_timeout_seconds,
+                             workdir="desktop-test"))
+    for other_repo in ["xml-test", "misc-test"]:
+        b.addStep(ShellCommand(command=["rm", "-rf", "../" + other_repo],
+                               name="clear-old-" + other_repo,
+                               workdir="desktop-test"))
+        b.addStep(ShellCommand(
+                command=["bzr", "checkout", 
+                         WithProperties("%s/lsb/%%(branch_name)s/%s"
+                                        % (bzr_toplevel, other_repo)),
+                         "../packaging"],
+                name="checkout-" + other_repo, timeout=bzr_timeout_seconds,
+                workdir="desktop-test"))
+    desktop_test.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
+                                      name="clear-old-results", 
+                                      workdir="desktop-test"))
+    desktop_test.addStep(ShellCommand(command=["mkdir", "-p", 
+                                               "../results"],
+                                      name="create-results-dir", 
+                                      workdir="desktop-test"))
+    desktop_test.addStep(LSBBuildPackage(name="build", haltOnFailure=True,
+                                         timeout=build_timeout_seconds,
+                                         workdir="desktop-test"))
+    desktop_test.addStep(ShellCommand(
+            command="find -L package -name '*.rpm' " +
+                    "-exec cp '{}' ../results ';'",
+            name="copy-results", workdir="desktop-test"))
+    desktop_test.addStep(ShellCommand(command=["tar", "czvf",
+                                               "../results.tar.gz", 
+                                    "../results"],
+                           name="pack-results", workdir="desktop-test"))
+    desktop_test.addStep(
+        FileUpload(slavesrc="../results.tar.gz", 
+                   masterdest=WithProperties("desktop-test-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
+                   name="upload-results", workdir="desktop-test"))
+    add_post_dependency_triggers("desktop-test", arch, desktop_test)
+    desktop_test.addStep(ShellCommand(command=["rm", "-rf", "../results"],
+                                      name="clear-results-dir",
+                                      workdir="desktop-test"))
+
+    locks = [nondep_job_lock.access('counting')]
+
+    lsb_builds.append(
+        { 'name': 'desktop-test-%s' % arch, 'slavenames': buildslaves,
+          'builddir': "desktop-test-%s" % arch, 'factory': desktop_test, 
+          'category': 'lsb', 'locks': locks })
+
+    # Builds based on appbat (appbat and libbat).
 
     libbat = factory.BuildFactory()
 
