"Weird" isn't; support dependent repos as part of package subdir builds.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -44,18 +44,47 @@ bzr_toplevel = "http://bzr.linuxfoundation.org/"
 
 lsb_archs = ["x86_64", "x86", "ia64", "ppc32", "ppc64", "s390", "s390x"]
 
+# Extra projects to build as part of the SDK project.
 lsb_bzr_sdk_projects = ["lsbdev-c++", "lsbdev-qt", "lsbdev-qt3"]
-lsb_pkg_subdir_projects = ["app-checker", "azov-qt3-tests", "azov-qt4-tests",
-                           "azov-xml2-tests", "distribution-checker",
-                           "dtk-manager", "libstdcpp-test", "lsb-setup",
-                           "lsb-xvfb", "lsb-sigchk", "lsbappchk-perl",
-                           "lsbappchk-python", "lsbappchk-sh", "lsbsi-tools", 
-                           "makelsbpkg", "olver-core-tests", "perl-test",
-                           "printing-test", "python-test", "qmtest-harness",
-                           "runtime-test", "t2c-alsa-tests", "t2c-cpp-tests", 
-                           "t2c-desktop-tests", "t2c-runtime-tests", 
-                           "task-pkgs", "tet-harness", "xts5-test"]
-lsb_pkg_subdir_weird_projects = ["desktop-test"]
+
+# "Package subdir" projects.  These have a "package" directory off the
+# source root, which has a Makefile which acts a certain way.  See any
+# of the current projects' package/Makefile for an example.  We declare
+# each project here as the key to the dict, and any extra repositories
+# needed during the build in the array value.
+lsb_pkg_subdir_projects = { "app-checker": [],
+                            "azov-qt3-tests": ["t2c-harness"],
+                            "azov-qt4-tests": ["t2c-harness"],
+                            "azov-xml2-tests": ["t2c-harness"],
+                            "desktop-test": ["xml-test", "misc-test"],
+                            "distribution-checker": [],
+                            "dtk-manager": [],
+                            "libstdcpp-test": [],
+                            "lsb-setup": [],
+                            "lsb-xvfb": [],
+                            "lsb-sigchk": [],
+                            "lsbappchk-perl": [],
+                            "lsbappchk-python": [],
+                            "lsbappchk-sh": [],
+                            "lsbsi-tools": [],
+                            "makelsbpkg": [],
+                            "olver-core-tests": [],
+                            "perl-test": [],
+                            "printing-test": ["runtime-test"],
+                            "python-test": ["misc-test"],
+                            "qmtest-harness": [],
+                            "runtime-test": [],
+                            "t2c-alsa-tests": ["t2c-harness"],
+                            "t2c-cpp-tests": ["t2c-harness"],
+                            "t2c-desktop-tests": ["t2c-harness"],
+                            "t2c-runtime-tests": ["t2c-harness"],
+                            "task-pkgs": [],
+                            "tet-harness": [],
+                            "xts5-test": ["vsw4-test"] }
+
+# "Packaging" projects.  These are built out of a tree called "packaging".
+# The name of the project in packaging is the first value of each tuple,
+# while the repository used to build it is the second.
 lsb_packaging_projects = [("lsbappchk", "misc-test"),
                           ("lsbarchk", "misc-test"),
                           ("lsbcmdchk", "misc-test"),
@@ -193,8 +222,8 @@ c['slavePortnum'] = 9988
 # put here: there are several in buildbot/changes/*.py to choose from.
 
 c['change_source'] = []
-lsb_change_sources = lsb_pkg_subdir_projects + lsb_pkg_subdir_weird_projects \
-    + [x[1] for x in lsb_packaging_projects if x[1] is not None] + ["appbat"]
+lsb_change_sources = lsb_pkg_subdir_projects.keys() + \
+    [x[1] for x in lsb_packaging_projects if x[1] is not None] + ["appbat"]
 added = []
 for project in lsb_change_sources:
     if project in added:
@@ -250,7 +279,7 @@ sch_sdk_names = ["build-sdk-" + x for x in lsb_archs]
 
 multi_builder_list = sch_sdk_names[:]
 
-arch_prj_list = lsb_pkg_subdir_projects + lsb_pkg_subdir_weird_projects + \
+arch_prj_list = lsb_pkg_subdir_projects.keys() + \
     ["appbat", "libbat"] + [x[0] for x in lsb_packaging_projects]
 
 for prj in arch_prj_list:
@@ -309,7 +338,7 @@ for arch in lsb_archs:
 
 # Package subdir schedulers.
 
-for prj in lsb_pkg_subdir_projects + lsb_pkg_subdir_weird_projects:
+for prj in lsb_pkg_subdir_projects:
     if prj in lsb_arch_indep_projects:
         archlist = [lsb_buildslave_arch_indep_arch]
     else:
@@ -542,6 +571,17 @@ for arch in lsb_archs:
         b.addStep(Bzr(baseURL=bzr_toplevel,
                       defaultBranch="lsb/devel/%s" % prj,
                       mode="copy", timeout=bzr_timeout_seconds, workdir=prj))
+        for other_repo in lsb_pkg_subdir_projects[prj]:
+            b.addStep(ShellCommand(command=["rm", "-rf", "../" + other_repo],
+                                   name="clear-old-" + other_repo,
+                                   workdir=prj))
+            b.addStep(ShellCommand(
+                    command=["bzr", "checkout", 
+                             WithProperties("%s/lsb/%%(branch_name)s/%s"
+                                            % (bzr_toplevel, other_repo)),
+                             "../packaging"],
+                    name="checkout-" + other_repo, timeout=bzr_timeout_seconds,
+                    workdir=prj))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
                                name="clear-old-results", workdir=prj))
         b.addStep(ShellCommand(command=["mkdir", "-p", "../results"],
@@ -642,62 +682,6 @@ for arch in lsb_archs:
 
     # Weird builds.  These don't conform to one of the patterns, and
     # so have to be custom.
-
-    # The desktop-test build is odd because it actually comes from
-    # three repositories, which have to also be checked out.
-    # Otherwise, it's a normal package-subdir build.
-
-    desktop_test = factory.BuildFactory()
-    desktop_test.addStep(LSBReloadSDK(name="reload-sdk", locks=[pkg_lock]))
-    add_pre_dependency_triggers("desktop-test", arch, desktop_test)
-    desktop_test.addStep(Bzr(baseURL=bzr_toplevel,
-                             defaultBranch="lsb/devel/desktop-test",
-                             mode="copy", timeout=bzr_timeout_seconds,
-                             workdir="desktop-test"))
-    for other_repo in ["xml-test", "misc-test"]:
-        b.addStep(ShellCommand(command=["rm", "-rf", "../" + other_repo],
-                               name="clear-old-" + other_repo,
-                               workdir="desktop-test"))
-        b.addStep(ShellCommand(
-                command=["bzr", "checkout", 
-                         WithProperties("%s/lsb/%%(branch_name)s/%s"
-                                        % (bzr_toplevel, other_repo)),
-                         "../packaging"],
-                name="checkout-" + other_repo, timeout=bzr_timeout_seconds,
-                workdir="desktop-test"))
-    desktop_test.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
-                                      name="clear-old-results", 
-                                      workdir="desktop-test"))
-    desktop_test.addStep(ShellCommand(command=["mkdir", "-p", 
-                                               "../results"],
-                                      name="create-results-dir", 
-                                      workdir="desktop-test"))
-    desktop_test.addStep(LSBBuildPackage(name="build", haltOnFailure=True,
-                                         timeout=build_timeout_seconds,
-                                         workdir="desktop-test"))
-    desktop_test.addStep(ShellCommand(
-            command="find -L package -name '*.rpm' " +
-                    "-exec cp '{}' ../results ';'",
-            name="copy-results", workdir="desktop-test"))
-    desktop_test.addStep(ShellCommand(command=["tar", "czvf",
-                                               "../results.tar.gz", 
-                                    "../results"],
-                           name="pack-results", workdir="desktop-test"))
-    desktop_test.addStep(
-        FileUpload(slavesrc="../results.tar.gz", 
-                   masterdest=WithProperties("desktop-test-%%(branch_name:-results)s%%(result_tag:-)s-%s.tar.gz" % arch),
-                   name="upload-results", workdir="desktop-test"))
-    add_post_dependency_triggers("desktop-test", arch, desktop_test)
-    desktop_test.addStep(ShellCommand(command=["rm", "-rf", "../results"],
-                                      name="clear-results-dir",
-                                      workdir="desktop-test"))
-
-    locks = [nondep_job_lock.access('counting')]
-
-    lsb_builds.append(
-        { 'name': 'desktop-test-%s' % arch, 'slavenames': buildslaves,
-          'builddir': "desktop-test-%s" % arch, 'factory': desktop_test, 
-          'category': 'lsb', 'locks': locks })
 
     # Builds based on appbat (appbat and libbat).
 
