Fix bug in dependency checkout, also add missing dep.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -64,7 +64,7 @@ lsb_pkg_subdir_projects = { "app-checker": [],
                             "lsb-xvfb": [],
                             "lsb-sigchk": [],
                             "lsbappchk-perl": [],
-                            "lsbappchk-python": [],
+                            "lsbappchk-python": ["misc-test"],
                             "lsbappchk-sh": [],
                             "lsbsi-tools": [],
                             "makelsbpkg": [],
@@ -579,7 +579,7 @@ for arch in lsb_archs:
                     command=["bzr", "checkout", 
                              WithProperties("%s/lsb/%%(branch_name)s/%s"
                                             % (bzr_toplevel, other_repo)),
-                             "../packaging"],
+                             "../" + other_repo],
                     name="checkout-" + other_repo, timeout=bzr_timeout_seconds,
                     workdir=prj))
         b.addStep(ShellCommand(command=["rm", "-rf", "../results"], 
