IndepTriggerable: pass a SourceStamp with the proper branch.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -155,10 +155,7 @@ def add_pre_dependency_triggers(project, arch, builder):
                     schedulerNames=["trigger-%s-%s" % (dep, arch)],
                     waitForFinish=True, updateSourceStamp=False,
                     haltOnFailure=True,
-                    copy_properties=['build_type'],
-                    set_properties={ 'branch': 
-                                     WithProperties("lsb/%(branch_name)s/" 
-                                                    + dep) }))
+                    copy_properties=['build_type', 'branch_name']))
 
 def add_post_dependency_triggers(project, arch, builder):
     pkg_install_command = \
@@ -315,7 +312,8 @@ sch_weekly_names = []
 
 for arch in lsb_archs:
     sch_libbat = IndepTriggerable(name="sch-libbat-" + arch,
-                                  builderNames=["libbat-" + arch])
+                                  builderNames=["libbat-" + arch],
+                                  defaultProject="libbat")
     sch_appbat = scheduler.Scheduler(name="sch-appbat-" + arch,
                                      branch="lsb/devel/appbat",
                                      builderNames=["appbat-" + arch],
@@ -363,7 +361,8 @@ for prj in lsb_pkg_subdir_projects:
         for deplist in lsb_dependencies.itervalues():
             if prj in deplist:
                 sch = IndepTriggerable(name="trigger-" + prj_name,
-                                       builderNames=[prj_name])
+                                       builderNames=[prj_name],
+                                       defaultProject=prj)
                 c['schedulers'].append(sch)
                 break
 
@@ -402,7 +401,7 @@ for prj in lsb_dependencies:
     for arch in archlist:
         prj_name = "%s-%s" % (prj, arch)
         sch = IndepTriggerable(name="trigger-" + prj_name,
-                               builderNames=[prj_name])
+                               builderNames=[prj_name], defaultProject=prj)
         c["schedulers"].append(sch)
 
 # Finally, the big weekly scheduler.  This makes sure every non-SDK
