Fix issues with new IndepTriggerable.

--- a/lsb_master.cfg
+++ b/lsb_master.cfg
@@ -311,9 +311,9 @@ sch_weekly_names = []
 # as well as the appbat.
 
 for arch in lsb_archs:
-    sch_libbat = IndepTriggerable(name="sch-libbat-" + arch,
+    sch_libbat = IndepTriggerable(name="trigger-libbat-" + arch,
                                   builderNames=["libbat-" + arch],
-                                  defaultProject="libbat")
+                                  defaultProject="appbat")
     sch_appbat = scheduler.Scheduler(name="sch-appbat-" + arch,
                                      branch="lsb/devel/appbat",
                                      builderNames=["appbat-" + arch],
@@ -394,15 +394,23 @@ for (prj, repo) in lsb_packaging_projects:
 # Triggerable schedulers for dependencies.
 
 for prj in lsb_dependencies:
-    if prj in lsb_arch_indep_projects:
-        archlist = [lsb_buildslave_arch_indep_arch]
-    else:
-        archlist = lsb_archs
-    for arch in archlist:
-        prj_name = "%s-%s" % (prj, arch)
-        sch = IndepTriggerable(name="trigger-" + prj_name,
-                               builderNames=[prj_name], defaultProject=prj)
-        c["schedulers"].append(sch)
+    # libbat is special, we define its schedulers earlier.
+    if prj != "libbat":
+        if prj in lsb_arch_indep_projects:
+            archlist = [lsb_buildslave_arch_indep_arch]
+        else:
+            archlist = lsb_archs
+        default_prj = prj
+        for (pkgprj, repo) in lsb_packaging_projects:
+            if pkgprj == prj:
+                default_prj = repo
+                break
+        for arch in archlist:
+            prj_name = "%s-%s" % (prj, arch)
+            sch = IndepTriggerable(name="trigger-" + prj_name,
+                                   builderNames=[prj_name],
+                                   defaultProject=default_prj)
+            c["schedulers"].append(sch)
 
 # Finally, the big weekly scheduler.  This makes sure every non-SDK
 # project is built at least once a week.
